# lecon

./: .gitignore  CMakeLists.txt  LeconSample.sln  LeconSample.vcxproj  LeconSample.vcxproj.filters  LeconWin.cpp  Win32Renderer.h
scripts/: getcitizen.py  getweather.py
src/: BoardConfig.c.txt  BoardConfig.cpp  BoardConfig.h  BoardManager.h  InputQueue.cpp  InputQueue.h  InterfaceSpotify.cpp  InterfaceSpotify.h  InterfaceTestOS.cpp  InterfaceTestOS.h  InterfaceWebsocket.cpp  InterfaceWebsocket.h  InterfaceWs.cpp  InterfaceWs.h  Lecon.cpp  Lecon2.cpp  Lecon2.h  LeconConfig.cpp  LeconConfig.h  LeconWS2812.h  PSTask.cpp  PSTask.h  PixelFonts.h  PixelFonts2.cpp  PixelFonts2.h  PixelSequenceAlert.cpp  PixelSequenceAlert.h  PixelSequenceLyrics.cpp  PixelSequenceLyrics.h  PixelSequenceText.cpp  PixelSequenceText.h  PixelSequenceTime.h  PixelSequenceWeather.cpp  PixelSequenceWeather.h  PixelSequences.cpp  PixelSequences.h  PixelSequencesNews.cpp  PixelSequencesNews.h  Render.cpp  Render.h  (+14 more)
